language-bindings/rust/crates/wamr-sys/src/lib.rs

extern "C" {
    #[doc = " Allocate memory from runtime memory environment.\n\n @param size bytes need to allocate\n\n @return the pointer to memory allocated"]
    pub fn wasm_runtime_malloc(size: ::core::ffi::c_uint) -> *mut ::core::ffi::c_void;
}
extern "C" {
    #[doc = " Reallocate memory from runtime memory environment\n\n @param ptr the original memory\n @param size bytes need to reallocate\n\n @return the pointer to memory reallocated"]
    pub fn wasm_runtime_realloc(
        ptr: *mut ::core::ffi::c_void,
        size: ::core::ffi::c_uint,
    ) -> *mut ::core::ffi::c_void;
}
extern "C" {
    pub fn wasm_runtime_free(ptr: *mut ::core::ffi::c_void);
}
extern "C" {
    pub fn wasm_runtime_get_mem_alloc_info(mem_alloc_info: *mut mem_alloc_info_t) -> bool;
}
extern "C" {
    #[doc = " Get the package type of a buffer.\n\n @param buf the package buffer\n @param size the package buffer size\n\n @return the package type, return Package_Type_Unknown if the type is unknown"]
    pub fn get_package_type(buf: *const u8, size: u32) -> package_type_t;
}
extern "C" {
    #[doc = " Check whether a file is an AOT XIP (Execution In Place) file\n\n @param buf the package buffer\n @param size the package buffer size\n\n @return true if success, false otherwise"]
    pub fn wasm_runtime_is_xip_file(buf: *const u8, size: u32) -> bool;
}
#[doc = " Callback to load a module file into a buffer in multi-module feature"]
pub type module_reader = ::core::option::Option<
    unsafe extern "C" fn(
        module_type: package_type_t,
        module_name: *const ::core::ffi::c_char,
        p_buffer: *mut *mut u8,
        p_size: *mut u32,
    ) -> bool,
>;
#[doc = " Callback to release the buffer loaded by module_reader callback"]
pub type module_destroyer =
    ::core::option::Option<unsafe extern "C" fn(buffer: *mut u8, size: u32)>;
extern "C" {
    #[doc = " Setup callbacks for reading and releasing a buffer about a module file\n\n @param reader a callback to read a module file into a buffer\n @param destroyer a callback to release above buffer"]
    pub fn wasm_runtime_set_module_reader(reader: module_reader, destroyer: module_destroyer);
}
extern "C" {
    #[doc = " Give the \"module\" a name \"module_name\".\n Can not assign a new name to a module if it already has a name\n\n @param module_name indicate a name\n @param module the target module\n @param error_buf output of the exception info\n @param error_buf_size the size of the exception string\n\n @return true means success, false means failed"]
    pub fn wasm_runtime_register_module(
        module_name: *const ::core::ffi::c_char,
        module: wasm_module_t,
        error_buf: *mut ::core::ffi::c_char,
        error_buf_size: u32,
    ) -> bool;
}
extern "C" {
    #[doc = " Check if there is already a loaded module named module_name in the\n runtime. Repeately loading a module with the same name is not allowed.\n\n @param module_name indicate a name\n\n @return return WASM module loaded, NULL if failed"]
    pub fn wasm_runtime_find_module_registered(
        module_name: *const ::core::ffi::c_char,
    ) -> wasm_module_t;
}
extern "C" {
    #[doc = " Load a WASM module from a specified byte buffer. The byte buffer can be\n WASM binary data when interpreter or JIT is enabled, or AOT binary data\n when AOT is enabled. If it is AOT binary data, it must be 4-byte aligned.\n\n Note: In case of AOT XIP modules, the runtime doesn't make modifications\n to the buffer. (Except the \"Known issues\" mentioned in doc/xip.md.)\n Otherwise, the runtime can make modifications to the buffer for its\n internal purposes. Thus, in general, it isn't safe to create multiple\n modules from a single buffer.\n\n @param buf the byte buffer which contains the WASM/AOT binary data,\n        note that the byte buffer must be writable since runtime may\n        change its content for footprint and performance purpose, and\n        it must be referencable until wasm_runtime_unload is called\n @param size the size of the buffer\n @param error_buf output of the exception info\n @param error_buf_size the size of the exception string\n\n @return return WASM module loaded, NULL if failed"]
    pub fn wasm_runtime_load(
        buf: *mut u8,
        size: u32,
        error_buf: *mut ::core::ffi::c_char,
        error_buf_size: u32,
    ) -> wasm_module_t;
}
extern "C" {
    #[doc = " Load a WASM module from a specified WASM or AOT section list.\n\n @param section_list the section list which contains each section data\n @param is_aot whether the section list is AOT section list\n @param error_buf output of the exception info\n @param error_buf_size the size of the exception string\n\n @return return WASM module loaded, NULL if failed"]
    pub fn wasm_runtime_load_from_sections(
        section_list: wasm_section_list_t,
        is_aot: bool,
        error_buf: *mut ::core::ffi::c_char,
        error_buf_size: u32,
    ) -> wasm_module_t;
}
extern "C" {
    #[doc = " Unload a WASM module.\n\n @param module the module to be unloaded"]
    pub fn wasm_runtime_unload(module: wasm_module_t);
}
extern "C" {
    #[doc = " Get the module hash of a WASM module, currently only available on\n linux-sgx platform when the remote attestation feature is enabled\n\n @param module the WASM module to retrieve\n\n @return the module hash of the WASM module"]
    pub fn wasm_runtime_get_module_hash(module: wasm_module_t) -> *mut ::core::ffi::c_char;
}
extern "C" {
    #[doc = " Set WASI parameters.\n\n While this API operates on a module, these parameters will be used\n only when the module is instantiated. That is, you can consider these\n as extra parameters for wasm_runtime_instantiate().\n\n @param module        The module to set WASI parameters.\n @param dir_list      The list of directories to preopen. (real path)\n @param dir_count     The number of elements in dir_list.\n @param map_dir_list  The list of directories to preopen. (mapped path)\n                      Format for each map entry: <guest-path>::<host-path>\n @param map_dir_count The number of elements in map_dir_list.\n                      If map_dir_count is smaller than dir_count,\n                      mapped path is assumed to be same as the\n                      corresponding real path for the rest of entries.\n @param env           The list of environment variables.\n @param env_count     The number of elements in env.\n @param argv          The list of command line arguments.\n @param argc          The number of elements in argv.\n @param stdin_handle  The raw host handle to back WASI STDIN_FILENO.\n                      If an invalid handle is specified (e.g. -1 on POSIX,\n                      INVALID_HANDLE_VALUE on Windows), the platform default\n                      for STDIN is used.\n @param stdoutfd      The raw host handle to back WASI STDOUT_FILENO.\n                      If an invalid handle is specified (e.g. -1 on POSIX,\n                      INVALID_HANDLE_VALUE on Windows), the platform default\n                      for STDOUT is used.\n @param stderrfd      The raw host handle to back WASI STDERR_FILENO.\n                      If an invalid handle is specified (e.g. -1 on POSIX,\n                      INVALID_HANDLE_VALUE on Windows), the platform default\n                      for STDERR is used."]
    pub fn wasm_runtime_set_wasi_args_ex(
        module: wasm_module_t,
        dir_list: *mut *const ::core::ffi::c_char,
        dir_count: u32,
        map_dir_list: *mut *const ::core::ffi::c_char,
        map_dir_count: u32,
        env: *mut *const ::core::ffi::c_char,
        env_count: u32,
        argv: *mut *mut ::core::ffi::c_char,
        argc: ::core::ffi::c_int,
        stdinfd: i64,
        stdoutfd: i64,
        stderrfd: i64,
    );
}
extern "C" {
    #[doc = " Set WASI parameters.\n\n Same as wasm_runtime_set_wasi_args_ex but with default stdio handles"]
    pub fn wasm_runtime_set_wasi_args(
        module: wasm_module_t,
        dir_list: *mut *const ::core::ffi::c_char,
        dir_count: u32,
        map_dir_list: *mut *const ::core::ffi::c_char,
        map_dir_count: u32,
        env: *mut *const ::core::ffi::c_char,
        env_count: u32,
        argv: *mut *mut ::core::ffi::c_char,
        argc: ::core::ffi::c_int,
    );
}
extern "C" {
    pub fn wasm_runtime_set_wasi_addr_pool(
        module: wasm_module_t,
        addr_pool: *mut *const ::core::ffi::c_char,
        addr_pool_size: u32,
    );
}
extern "C" {
    pub fn wasm_runtime_set_wasi_ns_lookup_pool(
        module: wasm_module_t,
        ns_lookup_pool: *mut *const ::core::ffi::c_char,
        ns_lookup_pool_size: u32,
    );
}
extern "C" {
    #[doc = " Instantiate a WASM module.\n\n @param module the WASM module to instantiate\n @param default_stack_size the default stack size of the module instance when the\n        exec env's operation stack isn't created by user, e.g. API\n        wasm_application_execute_main() and wasm_application_execute_func()\n        create the operation stack internally with the stack size specified\n        here. And API wasm_runtime_create_exec_env() creates the operation\n        stack with stack size specified by its parameter, the stack size\n        specified here is ignored.\n @param host_managed_heap_size the default heap size of the module instance, a heap will\n        be created besides the app memory space. Both wasm app and native\n        function can allocate memory from the heap.\n @param error_buf buffer to output the error info if failed\n @param error_buf_size the size of the error buffer\n\n @return return the instantiated WASM module instance, NULL if failed"]
    pub fn wasm_runtime_instantiate(
        module: wasm_module_t,
        default_stack_size: u32,
        host_managed_heap_size: u32,
        error_buf: *mut ::core::ffi::c_char,
        error_buf_size: u32,
    ) -> wasm_module_inst_t;
}
extern "C" {
    #[doc = " Set the running mode of a WASM module instance, override the\n default running mode of the runtime. Note that it only makes sense when\n the input is a wasm bytecode file: for the AOT file, runtime always runs\n it with AOT engine, and this function always returns true.\n\n @param module_inst the WASM module instance to set running mode\n @param running_mode the running mode to set\n\n @return true if success, false otherwise"]
    pub fn wasm_runtime_set_running_mode(
        module_inst: wasm_module_inst_t,
        running_mode: RunningMode,
    ) -> bool;
}
extern "C" {
    #[doc = " Get the running mode of a WASM module instance, if no running mode\n is explicitly set the default running mode of runtime will\n be used and returned. Note that it only makes sense when the input is a\n wasm bytecode file: for the AOT file, this function always returns 0.\n\n @param module_inst the WASM module instance to query for running mode\n\n @return the running mode this module instance currently use"]
    pub fn wasm_runtime_get_running_mode(module_inst: wasm_module_inst_t) -> RunningMode;
}
extern "C" {
    #[doc = " Deinstantiate a WASM module instance, destroy the resources.\n\n @param module_inst the WASM module instance to destroy"]
    pub fn wasm_runtime_deinstantiate(module_inst: wasm_module_inst_t);
}
extern "C" {
    #[doc = " Get WASM module from WASM module instance\n\n @param module_inst the WASM module instance to retrieve\n\n @return the WASM module"]
    pub fn wasm_runtime_get_module(module_inst: wasm_module_inst_t) -> wasm_module_t;
}
extern "C" {
    pub fn wasm_runtime_is_wasi_mode(module_inst: wasm_module_inst_t) -> bool;
}
extern "C" {
    pub fn wasm_runtime_lookup_wasi_start_function(
        module_inst: wasm_module_inst_t,
    ) -> wasm_function_inst_t;
}
